--- a/app/Resources/views/recette/index.html.twig
+++ b/app/Resources/views/recette/index.html.twig
@@ -1,153 +1,130 @@
 {% extends 'base.html.twig' %}
 {% block title %}Recette{% endblock %}
+
 {% block body %}
-    <h1>Les Recettes</h1>
+    <div class="titre">
+        <h1>Les recettes</h1>
+    </div>
+    <div class="container">
+        <img style="width: 100%;height: 70%; " src="{{ asset("/images/homebg.jpg") }}">
+    </div>
+    <div class="hero">
+        <ul id="ongletsPlat">
+            <li class="actif">Entrée</li>
+            <li>Plat principal</li>
+            <li>Dessert</li>
+        </ul>
+        <div id="contenu">
+            <div class="item">
+                <table>
+
+                    {% for recette in recettes | sort %}
+                        {% if (recette.plat =='Entrée') %}
+                            <tr>
+                                <td><a href='{{ path('recette_recipe', { 'nom': recette.nom }) }}'>{{ recette.nom }}</a></td>
+                                <td><img style='width:100px; height:100px;border-radius: 15px' src='/image/{{ recette.urlPhoto }}'></td>
+                                <td>Pour {{ recette.part }} personnes,</td>
+                                <td>il vous faudra {{ recette.duree }} minutes.</td>
+                                {#_______________visible par l'admin________________#}
+                                <td>
+                                    <ul>
+                                        <li>
+                                            <a href='{{ path('recette_show', { 'id': recette.id }) }}'>show</a>
+                                        </li>
+                                        <li>
+                                            <a href='{{ path('recette_edit', { 'id': recette.id }) }}'>edit</a>
+                                        </li>
+                                    </ul>
+                                </td>
+                                {#___________________________________________________#}
+                            </tr>
+                        {% endif %}
+                    {% endfor %}
+                </table>
+            </div>
+            <div class="item">
+                <table>
+                    {% for recette in recettes %}
+                        {% if (recette.plat =='Plat principal') %}
+                            <tr>
+                                <td><a href='{{ path('recette_recipe', { 'nom': recette.nom }) }}'>{{ recette.nom }}</a></td>
+                                <td><img style='width:100px; height:100px;border-radius: 15px' src='/image/{{ recette.urlPhoto }}'></td>
+                                <td>Pour {{ recette.part }} personnes,</td>
+                                <td>il vous faudra {{ recette.duree }} minutes.</td>
+                                {#_______________visible par l'admin________________#}
+                                <td>
+                                    <ul>
+                                        <li>
+                                            <a href='{{ path('recette_show', { 'id': recette.id }) }}'>show</a>
+                                        </li>
+                                        <li>
+                                            <a href='{{ path('recette_edit', { 'id': recette.id }) }}'>edit</a>
+                                        </li>
+                                    </ul>
+                                </td>
+                                {#___________________________________________________#}
+                            </tr>
+                        {% endif %}
+                    {% endfor %}
+                </table>
+            </div>
+            <div class="item">
+                <table>
+                    {% for recette in recettes %}
+                        {% if (recette.plat =='Dessert') %}
+                            <tr>
+                                <td><a href='{{ path('recette_recipe', { 'nom': recette.nom }) }}'>{{ recette.nom }}</a></td>
+                                <td><img style='width:100px; height:100px;border-radius: 15px' src='/image/{{ recette.urlPhoto }}'></td>
+                                <td>Pour {{ recette.part }} personnes,</td>
+                                <td>il vous faudra {{ recette.duree }} minutes.</td>
+                                {#_______________visible par l'admin________________#}
+                                <td>
+                                    <ul>
+                                        <li>
+                                            <a href='{{ path('recette_show', { 'id': recette.id }) }}'>show</a>
+                                        </li>
+                                        <li>
+                                            <a href='{{ path('recette_edit', { 'id': recette.id }) }}'>edit</a>
+                                        </li>
+                                    </ul>
+                                </td>
+                                {#___________________________________________________#}
+                            </tr>
+                        {% endif %}
+                    {% endfor %}
+                </table>
+            </div>
+        </div>
+
+        <div class="adminRecette">
+            <a href="{{ path('recette_new') }}">Create a new recette</a>
+        </div>
+    </div>
 
 
-    <script>
-            $(function() {
-                $('#ongletsPlat').css('display', 'block');
-                $('#ongletsPlat').click(function(event)
-                {
-                    var actuel = event.target;
-                    if (!/li/i.test(actuel.nodeName) || actuel.className.indexOf('actif') > -1) {
-                        return;
-                    }
-                    $(actuel).addClass('actif').siblings().removeClass('actif');
-                    setDisplay();
-                });
-                function setDisplay() {
-                    var modeAffichage;
-                    $('#ongletsPlat li').each(function(rang)
-                    {
-                        modeAffichage = $(this).hasClass('actif') ? '' : 'none';
-                        $('.item').eq(rang).css('display', modeAffichage);
-                    });
-                }
-                setDisplay();
+
+
+<script>
+    $(function() {
+        $('#ongletsPlat').css('display', 'block');
+        $('#ongletsPlat').click(function(event)
+        {
+            var actuel = event.target;
+            if (!/li/i.test(actuel.nodeName) || actuel.className.indexOf('actif') > -1) {
+                return;
+            }
+            $(actuel).addClass('actif').siblings().removeClass('actif');
+            setDisplay();
+        });
+        function setDisplay() {
+            var modeAffichage;
+            $('#ongletsPlat li').each(function(rang)
+            {
+                modeAffichage = $(this).hasClass('actif') ? '' : 'none';
+                $('.item').eq(rang).css('display', modeAffichage);
             });
-
-            // $(function() {
-            //     $('#ongletsRegime').css('display', 'block');
-            //     $('#ongletsRegime').click(function(event)
-            //     {
-            //         var actuel = event.target;
-            //         if (!/li/i.test(actuel.nodeName) || actuel.className.indexOf('actif') > -1) {
-            //             return;
-            //         }
-            //         $(actuel).addClass('actif').siblings().removeClass('actif');
-            //         setDisplay();
-            //     });
-            //     function setDisplay() {
-            //         var modeAffichage;
-            //         $('#ongletsRegime li').each(function(rang)
-            //         {
-            //             modeAffichage = $(this).hasClass('actif') ? '' : 'none';
-            //             $('.item').eq(rang).css('display', modeAffichage);
-            //         });
-            //     }
-            //     setDisplay();
-            // });
-        </script>
-
-
-    </head>
-    <body>
-
-    <ul id="ongletsPlat">
-        <li class="actif">Entrée</li>
-        <li>Plat principal</li>
-        <li>Dessert</li>
-    </ul>
-    <div id="contenu">
-        <div class="item">
-            <table>
-{#            <ul id="ongletsRegime">#}
-{#                <li class="actif">Normal</li>#}
-{#                <li>Végétarien</li>#}
-{#                <li>Végan</li>#}
-{#            </ul>#}
-            {% for recette in recettes | sort %}
-                {% if (recette.plat =='Entrée') %}
-                    <tr>
-                        <td><a href='{{ path('recette_recipe', { 'nom': recette.nom }) }}'>{{ recette.nom }}</a></td>
-                        <td><img style='width:100px; height:100px;' src='/image/{{ recette.urlPhoto }}'></td>
-                        <td>{{ recette.part }} pers.</td>
-                        <td>{{ recette.duree }} min</td>
-                        {#_______________visible par l'admin________________#}
-                        <td>
-                            <ul>
-                                <li>
-                                    <a href='{{ path('recette_show', { 'id': recette.id }) }}'>show</a>
-                                </li>
-                                <li>
-                                    <a href='{{ path('recette_edit', { 'id': recette.id }) }}'>edit</a>
-                                </li>
-                            </ul>
-                        </td>
-                        {#___________________________________________________#}
-                    </tr>
-                    {% endif %}
-                {% endfor %}
-            </table>
-        </div>
-        <div class="item">
-            <table>
-            {% for recette in recettes %}
-                {% if (recette.plat =='Plat principal') %}
-                    <tr>
-                        <td><a href='{{ path('recette_recipe', { 'nom': recette.nom }) }}'>{{ recette.nom }}</a></td>
-                        <td><img style='width:100px; height:100px;' src='/image/{{ recette.urlPhoto }}'></td>
-                        <td>{{ recette.part }} pers.</td>
-                        <td>{{ recette.duree }} min</td>
-                        {#_______________visible par l'admin________________#}
-                        <td>
-                            <ul>
-                                <li>
-                                    <a href='{{ path('recette_show', { 'id': recette.id }) }}'>show</a>
-                                </li>
-                                <li>
-                                    <a href='{{ path('recette_edit', { 'id': recette.id }) }}'>edit</a>
-                                </li>
-                            </ul>
-                        </td>
-                        {#___________________________________________________#}
-                    </tr>
-                    {% endif %}
-                {% endfor %}
-            </table>
-        </div>
-        <div class="item">
-            <table>
-            {% for recette in recettes %}
-                {% if (recette.plat =='Dessert') %}
-                    <tr>
-                        <td><a href='{{ path('recette_recipe', { 'nom': recette.nom }) }}'>{{ recette.nom }}</a></td>
-                        <td><img style='width:100px; height:100px;' src='/image/{{ recette.urlPhoto }}'></td>
-                        <td>{{ recette.part }} pers.</td>
-                        <td>{{ recette.duree }} min</td>
-                        {#_______________visible par l'admin________________#}
-                        <td>
-                            <ul>
-                                <li>
-                                    <a href='{{ path('recette_show', { 'id': recette.id }) }}'>show</a>
-                                </li>
-                                <li>
-                                    <a href='{{ path('recette_edit', { 'id': recette.id }) }}'>edit</a>
-                                </li>
-                            </ul>
-                        </td>
-                        {#___________________________________________________#}
-                    </tr>
-                {% endif %}
-            {% endfor %}
-            </table>
-        </div>
-    </div>
-    </body>
-    </html>
-    <div class="adminRecette">
-        <a href="{{ path('recette_new') }}">Create a new recette</a>
-    </div>
-
+        }
+        setDisplay();
+    });
+</script>
 {% endblock %}
