mise en place pdf
Signed-off-by: juilleratn <juilleratnoel@gmail.com>

--- a/app/Resources/views/recette/recipe.html.twig
+++ b/app/Resources/views/recette/recipe.html.twig
@@ -48,7 +48,7 @@
                         <table>
                             <thead>
                                 <tr>
-                                    <th></th>
+                                    <th><a href='{{ path('liste_course',{'id': recette.id}) }}'>Liste de course</a></th>
                                     <th></th>
                                     <th></th>
                                     <th></th>
