--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,13 +8,16 @@
             <link href="{{ asset('/css/base.css') }}" rel="stylesheet"/>
             <link href="{{ asset('/css/recipe.css') }}" rel="stylesheet"/>
             <link href="{{ asset('/css/onglet.css') }}" rel="stylesheet"/>
+
         {% endblock %}
         <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" type="image/x-icon">
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
 
     </head>
     <body>
-    
+
     <header>
         <div class="ikouq">
             <div class="logo"></div>
