--- a/app/Resources/views/recette/pdf_course.html.twig
+++ b/app/Resources/views/recette/pdf_course.html.twig
@@ -1,1 +1,11 @@
 {% extends 'base.html.twig' %}
+{% block body %}
+    <h1>Liste de courses  </h1>
+<h2>{{ recette.nom }} pour {{ recette.part }} personnes</h2>
+
+    <div id="course"></div>
+
+
+
+{%  endblock %}
+
