--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,8 +38,7 @@
                 integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
                 crossorigin="anonymous">
         </script>
-        <script
-           src=" https://cdnjs.cloudflare.com/ajax/libs/jquery-ajaxy/1.6.1/scripts/jquery.ajaxy.js">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js">
         </script>
     {% endblock %}
         {% block body %}{% endblock %}
